# common-rs

./: .gitignore  Cargo.toml  README.md
src/: database.rs  lib.rs  model.rs  postgres.rs  scheduler.rs
src/dao/: mod.rs  r2d2_postgres.rs  sqlite.rs  sqlx_postgres.rs
src/dao/r2d2_postgres/: connection.rs  dao.rs
src/dao/sqlite/: dao.rs
src/model/: result.rs
src/postgres/: connection.rs  controller.rs  dao.rs
src/sqlite/: connection.rs  dao.rs
src/web/: mod.rs  r2d2_postgres.rs  sqlx_postgres.rs
