[package]
name = "common"
version = "0.1.3-opt"
authors = ["Ding"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", default-features = false }
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"
serde_json =  "1.0.97"
log = "0.4.19"
r2d2 = "0.8.10"
dotenv = "0.15.0"
tokio-postgres = { version = "0.7.8", optional = true }
r2d2_postgres = { version = "0.18.1", optional = true }

r2d2_sqlite = { version = "0.22.0", optional = true }

rust-crypto = "0.2.36"
lazy_static = "1.4.0"
tokio = "1.28.2"
quartz_sched = { version = "0.1.11", optional = true }
[features]
default = ["postgres"]
postgres = ["r2d2_postgres", "tokio-postgres"]
quartz = ["quartz_sched"]
sqlite = ["r2d2_sqlite"]


