[package]
name = "common"
version = "0.1.4"
authors = ["Calm0406"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
r2d2 = "0.8"
dotenv = "0.15"
tokio-postgres = { version = "0.7", optional = true }
r2d2_postgres = { version = "0.18", optional = true }

r2d2_sqlite = { version = "0.25.0", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"], optional = true }
async-trait = { version = "0.1", optional = true }
rust-crypto = "0.2.36"
lazy_static = "1.5.0"
tokio = "1.40"
quartz_sched = { version = "0.1.11", optional = true }
[features]
default = ["r2d2_pg"]
r2d2_pg = ["r2d2_postgres", "tokio-postgres"]
sqlx_pg = ["sqlx", "async-trait"]
quartz = ["quartz_sched"]
sqlite = ["r2d2_sqlite"]



[gitflow]
production_branch = "main"
development_branch = "develop"
feature_branch_prefix = "feature/"
hotfix_branch_prefix = "hotfix/"
version_tag_prefix = "v"
origin = "origin"